src/test/ui/parser/lex-bad-char-literals-7.stderr
error: empty character literal
  --> $DIR/lex-bad-char-literals-7.rs:2:20
   |
LL |     let _: char = '';
   |                    ^

error: empty unicode escape (must have at least 1 hex digit)
  --> $DIR/lex-bad-char-literals-7.rs:4:20
   |
LL |     let _: char = '\u{}';
   |                    ^^^^

error[E0762]: unterminated character literal
  --> $DIR/lex-bad-char-literals-7.rs:11:13
   |
LL |     let _ = ' hello // here's a comment
   |             ^^^^^^^^

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-7.rs:11:13
   |
LL |     let _ = ' hello // here's a comment
   |             ^^^^^^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let _ = " hello "/ here's a comment
   |             ^^^^^^^^^

error: expected `;`, found `}`
  --> $DIR/lex-bad-char-literals-7.rs:11:21
   |
LL |     let _ = ' hello // here's a comment
   |                     ^ help: add `;` here
LL |
LL | }
   | - unexpected token

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0762`.
